--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,18 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+<div class="container_12 header">
+	<div class="grid_6">
+		<h1>LOGO</h1>
+	</div>
+	<div class="grid_6">
+		<div style="float: right;">
+			<h5><%= link_to 'Sign in with Google', '/oauth2' %></h5>
+		</div>
+	</div>
+</div>
+<div class="container_12">
+	<%= yield %>
+</div>
 </body>
 </html>
