--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 	</div>
 	<div class="grid_6">
 		<div style="float: right;">
-			<h5><%= link_to 'Sign in with Google', '/oauth2' %></h5>
+			<h5><%= link_to 'Sign in with Google', '/auth/google_oauth2' %></h5>
 		</div>
 	</div>
 </div>
