--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,20 @@
 	</div>
 	<div class="grid_6">
 		<div style="float: right;">
-			<h5><%= link_to 'Sign in with Google', '/auth/google_oauth2' %></h5>
+			<% if current_user %>
+	          Signed in as <%= current_user.name %>!
+	          <%= link_to "Sign out", signout_path %>
+	        <% else %>
+	          <%= link_to 'Sign in with Google', '/auth/google_oauth2' %>
+	          <%# link_to "Sign in with Facebook", "/auth/facebook" %>
+	        <% end %>
 		</div>
 	</div>
 </div>
 <div class="container_12">
+	<% flash.each do |name, msg| %>
+    	<%= content_tag :div, msg, id: "flash_#{name}" %>
+    <% end %>
 	<%= yield %>
 </div>
 </body>
