--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
 <div class="container_12 header">
 	<div class="grid_6">
-		<h1>LOGO</h1>
+		<h1><%= link_to "BookForBook", root_url %></h1>
 	</div>
 	<div class="grid_6">
 		<div style="float: right;">
