--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -13,7 +13,7 @@
 
 <div class="grid_12">
 	<% if current_user %>
-		<%= form_for :user do |f| %>
+		<%= form_for @user do |f| %>
 			<%= f.text_field :iwant %>
 			<%= f.submit %>
 		<% end %>
@@ -22,12 +22,29 @@
 		<h3><%= "My books: " if current_user.books.count > 0 %></h3>
 		<table class="table table-hover">
 		<thead>
-			<tr><th>Name</th><th>Author</th><th></th></tr>
+			<tr><th>Cover</th><th>Name</th><th></th></tr>
 		</thead>
 		<tbody>
 		<% current_user.books.each do |b| %>
 			<tr>
-				<td><%= b.title %></td><td>dddd</td>
+				<td><%= image_tag b.cover, width: '32px' %></td><td><%= b.title %>
+					<% if b.comment %>
+					<div class="edit_comment"><b><%= b.comment %></b></div>
+					<div class="form_comment" style="display: none;">
+						<%= form_for b do |f| %>
+							<%= f.text_field :comment %>
+							<%= f.submit %>
+						<% end %>
+					</div>
+					<% else %>
+					<div class="form_comment">
+						<%= form_for b do |f| %>
+							<%= f.text_field :comment %>
+							<%= f.submit %>
+						<% end %>
+					</div>
+					<% end %>
+				</td><td></td>
 			</tr>
 		<% end %>
 		</tbody>
