--- a/app/views/pages/adding.html.erb
+++ b/app/views/pages/adding.html.erb
@@ -1,7 +1,3 @@
-<style>
-.gbentry{padding: 3px; margin: 1em 0; background: #A0A0A0; border-radius:3px}
-.btitle{font-weight: bold}
-</style>
 <div class="grid_12">
 	<% @entries.each do |e| %>
 		<div class="gbentry">
@@ -10,13 +6,15 @@
 				</div>
 				<p class="btitle"><%=e.title%></p>
 				<p class="bauthors"><%=e.authors%></p>
-				<p><%=link_to 'view on google books', e.info_link %></p>
+				<p class="gblink"><%=link_to 'View on Google Books', e.info_link %></p>
+				<div class="gbform">
 				<%= form_for @book do |f| %>
 					<%= f.hidden_field :title, value: e.title %>
 					<%= f.hidden_field :author, value: e.authors %>
 					<%= f.hidden_field :cover, value: e.image_link %>
-					<%= f.submit "Add book" if current_user %>
+					<%= f.submit "Add to my books" if current_user %>
 				<% end %>
+				</div>
 				<div class="clear"></div>
 		</div>
 	<% end %>
