--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,29 +1,18 @@
-<h1>Listing messages</h1>
-
-<table>
+<div style="margin-bottom: 10px;">
+	<div style="float: left; margin-right: 10px;"><%= image_tag @book.cover, width: '64px' %></div>
+	<div><%= @book.author %>. <%= @book.title %><br /><i><%= @book.comment %></i><br /><b>User want: </b><%= @book.user.iwant %></td><td></div>
+	<div class="clear"></div>
+</div>
+<table class="table">
   <tr>
-    <th>Body</th>
-    <th>Book</th>
     <th>User</th>
-    <th>Recepient</th>
-    <th></th>
-    <th></th>
-    <th></th>
+    <th>Body</th>
   </tr>
 
-<% @messages.each do |message| %>
+<% @messages.order('created_at DESC').each do |message| %>
   <tr>
+    <td><i style="font-size: 9px;"><%= message.created_at.strftime('%e.%m.%y %k:%M')%></i> <%= message.user.name %></td>
     <td><%= message.body %></td>
-    <td><%= message.book_id %></td>
-    <td><%= message.user_id %></td>
-    <td><%= message.recepient_id %></td>
-    <td><%= link_to 'Show', message %></td>
-    <td><%= link_to 'Edit', edit_message_path(message) %></td>
-    <td><%= link_to 'Destroy', message, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
-
-<br />
-
-<%= link_to 'New Message', new_message_path %>
