--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,14 +11,23 @@
  *= require_self
  *= require_tree .
  */
-body{ background: #1F1F1F; color: #CFCFCF; padding-top: .5em !important}
+body{ background: #1F1F1F; color: #CFCFCF; padding: 0; padding-top: .5em !important; margin: 1em !important}
 input{ background: black; color: white; border-color: #808080; border-style: solid; border-width: 1px; border-radius: 4px; padding: 4px;}
 input[type="submit"]{background: #5F5F5F; color: #DFDFDF; border-style: groove; min-width: 8em}
 a{color: #9F9FFF}
-.logo{text-decoration: none; color: #E89D48}
+h1, h2, h3, h4{font-weight: normal; margin: 0; color: #E89D48}
+h2{margin-top: 1.5em; margin-bottom: .4em}
+.logo{text-decoration: none;  color: #E89D48; opacity: .5}
 .gbentry{position: relative; padding: .5em; margin: 0 0 .5em 0; background: #0F0F0F; border-radius:3px}
 .btitle{font-weight: bold; font-size: 150%}
 .bauthors, .gblink{ opacity: .8 !important}
 .gbentry p {margin-bottom: .5em}
 .edit_comment {cursor: pointer}
-
+.signin{position: absolute; top: 1em; right: 1em}
+.quad{width: 1em}
+.first{ float: left}
+.second{ float: right }
+.first, .second{ width: -webkit-calc(50% - .5em)}
+.search-input{ width: 25em }
+.search-submit{ width: 10em }
+.clear{ clear: both }
