--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,7 +21,9 @@ a{color: #9F9FFF}
 .bauthors, .gblink{ opacity: .8 !important}
 .gbentry p {margin-bottom: .5em}
 .edit_comment {cursor: pointer}
-.new_message {}
+.new_message {
+	cursor: pointer;
+}
 .messages_board {
 	position:absolute;
   	top: 50px;
