--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,23 +7,24 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<h1><%= link_to "Book for book", root_url, class:'logo' %></h1>
+<h1><%= link_to "Book for book", root_url, class: 'logo' %></h1>
 
-<p class="signin">
+<div class="signin">
 <% if current_user %>
-	Signed in as <%= current_user.email %><span class="quad">&nbsp;&nbsp;<%= link_to "Sign out", signout_path %>
-<% else %>
-	<%= link_to 'Sign in with Google', 'https://bookforbook.herokuapp.com/auth/google_oauth2' %>
-<% end %>
-</p>
-	          <% if current_user.messages.any? or Message.where(recepient_id: current_user.id).any? %>
-	          	<div class="new_message"><i class="icon-envelope icon-white"></i> <%= "You have new message"%></div>
+	Signed in as <%= current_user.email %> <%= link_to "Sign out", signout_path %>
+			<% if current_user.messages.any? or Message.where(recepient_id: current_user.id).any? %>
+	          	<br /><div class="new_message"><i class="icon-envelope icon-white"></i> <%= "You have new message"%></div>
 	          	<div class="messages_board" style="display: none;">
 	          		<% allmessages.each do |m| %>
 	          			<%= link_to truncate(m.book.title, :length => 60), book_messages_path(m.book) %><br />
 	          		<% end %>
 	          	</div>
-	          <% end %>
+	        <% end %>
+<% else %>
+	<%= link_to 'Sign in with Google', 'https://bookforbook.herokuapp.com/auth/google_oauth2' %>
+<% end %>
+</div>
+	          
 
 
 <% flash.each do |name, msg| %>
